# astroberry-os-sysmod

./: CMakeLists.txt  README.md  version.cmake
debian/: changelog  conffiles  control  copyright  install  postinst  postrm  preinst  prerm
files/: 10-network-manager.rules  10-synaptic.rules  Caddyfile  Hotspot.nmconnection  astroberry-os-init  astroberry.gpg  astroberry.sources  indiwebmanager.service  meta-data  xfce-applications.menu
files/apt/: astroberry-pin  astroberry.sources
files/boot/firmware/: meta-data.astroberry  network-config  user-data.astroberry
files/cloudinit/: network-config  user-data
files/desktop/: default.xml  lightdm-gtk-greeter.conf  xfce4-desktop.xml  xfce4-panel.xml  xfce4-session.xml  xfwm4.xml  xsettings.xml
files/etc/: issue  issue.net
files/etc/avahi/services/: astroberry.service
files/etc/caddy/: Caddyfile
files/etc/cloud/cloud.cfg.d/: 99-astroberry.cfg
files/etc/issue.d/: AstroberryOS.issue
files/etc/lightdm/: lightdm-gtk-greeter.conf.astroberry
files/etc/polkit-1/rules.d/: 99-astroberry-os.rules
files/etc/samba/: smb.conf.astroberry
files/etc/systemd/system/: astroberry-desktop-vnc.service  astroberry-desktop-web.service  astroberry-indiwebmanager.service  astroberry-websockify.service
files/etc/update-motd.d/: 20-astroberry-os
files/etc/xdg/menus/: xfce-applications.menu.astroberry
files/etc/xdg/xfce4/panel/: default.xml  default.xml.astroberry
files/etc/xdg/xfce4/xfconf/xfce-perchannel-xml/: xfce4-desktop.xml  xfce4-desktop.xml.astroberry  xfce4-session.xml.astroberry  xfwm4.xml.astroberry
files/filesharing/: smb.conf
files/firstboot/: astroberry-desktop-init
files/polkit/: 10-file-manager.rules  10-power-manager.rules
files/services/: astroberry-manager.service  astroberry.service  vncserver.service  websockify.service
files/usr/share/desktop-directories/: xfce-astronomy.directory
